--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "Page action by URL",
+  "name": "HackerNotes Plugin",
   "version": "1.0",
-  "description": "Shows a page action for urls which have the letter 'g' in them.",
+  "description": "Open HackerNotes page of a Github Repository.",
   "background": { "scripts": ["background.js"] },
   "page_action" :
   {
     "default_icon" : "icon-19.png",
-    "default_title" : "This is a github page!"
+    "default_title" : "HackerNotes"
   },
   "permissions" : [
     "tabs"
