--- a/manifest.json
+++ b/manifest.json
@@ -5,15 +5,15 @@
   "background": { "scripts": ["background.js"] },
   "page_action" :
   {
-    "default_icon" : "icon-19.png",
+    "default_icon" : "icon-16.jpg",
     "default_title" : "HackerNotes"
   },
   "permissions" : [
     "tabs"
   ],
   "icons" : {
-    "48" : "icon-48.png",
-    "128" : "icon-128.png"
+    "48" : "icon-48.jpg",
+    "128" : "icon-128.jpg"
   },
   "manifest_version": 2
 }
